--- a/ProjetoBackend/Views/Fornecedors/Create.cshtml
+++ b/ProjetoBackend/Views/Fornecedors/Create.cshtml
@@ -3,61 +3,61 @@
 @{
     ViewData["Title"] = "Create";
 }
+<div class="container">
 
-<h1>Fornecedores</h1>
+    <h1>Fornecedores</h1>
 
-<hr />
-<div class="row justify-content-center">
-    <div class="col-md-8">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-12 col-md-8 mt-2">
+    <hr />
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-12 col-md-8 mt-2">
 
-                        <label asp-for="Nome" class="control-label"></label>
-                        <input asp-for="Nome" class="form-control" />
-                        <span asp-validation-for="Nome" class="text-danger"></span>
-                    </div>
-                    <div class="col-12 col-md mt-2">
-                        <div class="form-group">
-                            <label asp-for="Email" class="control-label"></label>
-                            <input asp-for="Email" class="form-control" />
-                            <span asp-validation-for="Email" class="text-danger"></span>
+                            <label asp-for="Nome" class="control-label"></label>
+                            <input asp-for="Nome" class="form-control" />
+                            <span asp-validation-for="Nome" class="text-danger"></span>
+                        </div>
+                        <div class="col-12 col-md mt-2">
+                            <div class="form-group">
+                                <label asp-for="Email" class="control-label"></label>
+                                <input asp-for="Email" class="form-control" />
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
-                    <div class="form-group">
-                        <label asp-for="Celular" class="control-label"></label>
-                        <input asp-for="Celular" class="form-control" />
-                        <span asp-validation-for="Celular" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md-8 mt-2">
+                        <div class="form-group">
+                            <label asp-for="Celular" class="control-label"></label>
+                            <input asp-for="Celular" class="form-control" />
+                            <span asp-validation-for="Celular" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <label asp-for="CnpjCpf" class="control-label"></label>
+                            <input asp-for="CnpjCpf" class="form-control" />
+                            <span asp-validation-for="CnpjCpf" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <label asp-for="CnpjCpf" class="control-label"></label>
-                        <input asp-for="CnpjCpf" class="form-control" />
-                        <span asp-validation-for="CnpjCpf" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md mt-2">
+                        <a asp-action="Index" class="text-danger text-decoration-none btn btn-outline-danger w-100">Cancelar</a>
+                    </div>
+                    <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <input type="submit" value="Criar" class="btn btn-primary w-100" />
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md mt-2">
-                    <div class="btn btn-outline-danger w-100">
-                        <a asp-action="Index" class="text-danger text-decoration-none">Cancelar</a>
-                    </div>
-                </div>
-                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <input type="submit" value="Criar" class="btn btn-primary w-100" />
-                    </div>
-                </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
 
