--- a/ProjetoBackend/Views/Fornecedors/Index.cshtml
+++ b/ProjetoBackend/Views/Fornecedors/Index.cshtml
@@ -8,9 +8,7 @@
     <h1>Fornecedores</h1>
 
     <p>
-        <div class="btn btn-lg btn-1">
-            <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
-        </div>
+        <a asp-action="Create" class="text-decoration-none text-light btn btn-lg btn-1">Cadastrar</a>
     </p>
     <table class="table table-dark talbe-responsive">
         <thead>
@@ -47,12 +45,8 @@
                         @Html.DisplayFor(modelItem => item.CnpjCpf)
                     </td>
                     <td>
-                        <div class="btn btn-outline-primary">
-                            <a asp-action="Edit" asp-route-id="@item.FornecedorId" class="text-primary text-decoration-none">Editar</a>
-                        </div>
-                        <div class="btn btn-outline-danger">
-                            <a asp-action="Delete" asp-route-id="@item.FornecedorId" class="text-danger text-decoration-none">Deletar</a>
-                        </div>
+                        <a asp-action="Edit" asp-route-id="@item.FornecedorId" class="text-primary text-decoration-none btn btn-outline-primary">Editar</a> |
+                        <a asp-action="Delete" asp-route-id="@item.FornecedorId" class="text-danger text-decoration-none btn btn-outline-danger">Deletar</a>
                     </td>
                 </tr>
             }
